k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: trippr-app-service

  labels:
    app: trippr-app

spec:

  selector:
    app: trippr-app

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
