k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: trippr-ui-service

spec:

  selector:
    app: trippr-ui

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: LoadBalancer
